# api-rest-alexandria

./: .gitignore  .pre-commit-config.yaml  .sample_env  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
alexandria/: main.py
alexandria/app/: app.py  router.py  settings.py
alexandria/core/: models.py
alexandria/infrastructure/: db_init.py  repository.py
docs/diagrams/: domain.uxf
